--- a/Jg2i4.html
+++ b/Jg2i4.html
@@ -223,7 +223,7 @@
 </pre>
 <pre id="code33" class="unselectable codeClass">33					                    cleaner.clickRight() );
 </pre>
-<pre id="code34" class="unselectable codeClass">34			} while( !result.equals( "종료" ) );
+<pre id="code34" class="unselectable codeClass">34			} while( result.equals( "전원" ) || result.equals( "상" ) || result.equals( "하" ) || result.equals( "좌" ) || result.equals( "우" ) );
 </pre><pre id="code0" class="unselectable codeClass">							 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 프로그램 종료 </b></font>
 </pre>
