--- a/Jg2i5s.html
+++ b/Jg2i5s.html
@@ -196,7 +196,7 @@ TV 전원을 끕니다
 </pre><pre id="code0" class="unselectable codeClass">					}
 </pre><pre id="code0" class="unselectable codeClass">				}
 
-</pre><pre id="codeM28" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('M28')">M28			} while( !result.equals( "종료" ) );
+</pre><pre id="codeM28" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('M28')">M28			} while( result.equals( "전원" ) || result.equals( "상" ) || result.equals( "하" ) || result.equals( "좌" ) || result.equals( "우" ) );
 
 </pre><pre id="codeM29" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('M29')">M29		}
 </pre><pre id="code0" class="unselectable codeClass">	}
