--- a/Jg2i3.html
+++ b/Jg2i3.html
@@ -231,7 +231,7 @@ TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요
 <pre id="code33" class="unselectable codeClass">33					                    tv.clickRight() );
 </pre><pre id="code0" class="unselectable codeClass">	 
 </pre>
-<pre id="code34" class="unselectable codeClass">34			} while( !result.equals( "종료" ) );
+<pre id="code34" class="unselectable codeClass">34			} while( result.equals( "전원" ) || result.equals( "상" ) || result.equals( "하" ) || result.equals( "좌" ) || result.equals( "우" ) );
 </pre><pre id="code0" class="unselectable codeClass">							 
 </pre><pre id="code0" class="unselectable codeClass">		<font color="green">//<b> 프로그램 종료 </b></font>
 </pre>
