--- a/Jg2i3s.html
+++ b/Jg2i3s.html
@@ -111,7 +111,7 @@ TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요
 </pre><pre id="code32" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('32')">32					System.out.println(
 </pre><pre id="code33" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('33')">33					                    tv.clickRight() );
 
-</pre><pre id="code34" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('34')">34			} while( !result.equals( "종료" ) );
+</pre><pre id="code34" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('34')">34			} while( result.equals( "전원" ) || result.equals( "상" ) || result.equals( "하" ) || result.equals( "좌" ) || result.equals( "우" ) );
 </pre><pre id="code0" class="unselectable codeClass">							
 </pre><pre id="code35" class="unselectable codeClass" onmouseover="sP3f8(this.id, true) " onmouseout="sP3f8(this.id, false)" onclick="sP3f7('35')">35		}
 </pre><pre id="code0" class="unselectable codeClass">	}
