--- a/Jg2i4a.html
+++ b/Jg2i4a.html
@@ -1,24 +1,26 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "1", "-로봇청소기 리모컨 객체 생성" ], [ "4", "--상을 입력하면 직진 이동" ], [ "3", "--전원을 입력하면 전원을 켜거나 끄기" ], [ "2", "-리모컨의 입력에 따라 로봇청소기를 제어하고 그 결과를 출력" ], [ "7", "--우를 입력하면 우회전 이동" ], [ "0", "프로그램시작" ], [ "8", "프로그램 종료" ], [ "5", "--하를 입력하면 후진 이동" ], [ "6", "--좌를 입력하면 좌회전 이동" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>폭탄 피하기</a></li><li><a href='../Jg2i/Jg2i2.html'>가위바위보</a></li><li><a href='../Jg2i/Jg2i3.html'>리모컨-TV</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-로봇청소기</a></li><ul><li><a href='Jg2i4.html'>코드읽기</a></li><li><a href='Jg2i4a.html'>알고리즘</a></li><li><a href='Jg2i4k.html'>키워드</a></li><li><a href='Jg2i4b.html'>빈칸채우기</a></li><li><a href='Jg2i4s.html'>실행순서</a></li><li><a href='Jg2i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/src/remoteControl/RemoteControl.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/쓰레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀함수</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>로봇청소기 리모컨의 입력(전원, 상, 하, 좌, 우)에 따라 로봇청소기를 제어하는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'>로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
-로봇청소기 전원을 켭니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
-직진합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>하</span></b>
-후진합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>좌</span></b>
-좌회전합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>우</span></b>
-우회전합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
-</pre><br><pre class='selectable'>로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
-로봇청소기 전원을 켭니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
-로봇청소기 전원을 끕니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
-</pre><br><pre class='selectable'>로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
-직진합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
-직진합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
-직진합니다
-로봇청소기 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.5.0/jquery.min.js"></script> 		<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.8.9/jquery-ui.min.js"></script> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<script type="text/javascript" src="../functions.js"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script> 			const sP3d10 = [ [ "0", "1) 프로그램 시작" ], [ "10", "2) -리모컨 전원 선택시 전원을 켜거나 끄기" ], [ "2", "1) -리모컨 입력에 따라 TV 제어" ], [ "11", "2) -리모컨 상(△) 선택시 채널을 +1 이동" ], [ "6", "1) --리모컨 좌(◁) 선택시 TV 제어" ], [ "9", "2) TV 클래스" ], [ "14", "2) -리모컨 우(▷) 선택시 음량을 +1 이동" ], [ "8", "1) 프로그램 종료" ], [ "7", "1) --리모컨 우(▷) 선택시 TV 제어" ], [ "5", "1) --리모컨 하(▽) 선택시 TV 제어" ], [ "1", "1) -TV를 제어하는 리모컨 준비" ], [ "13", "2) -리모컨 좌(◁) 선택시 음량을 -1 이동" ], [ "12", "2) -리모컨 하(▽) 선택시 채널을 -1 이동" ], [ "4", "1) --리모컨 상(△) 선택시 TV 제어" ], [ "3", "1) --리모컨 전원 선택시 TV 제어" ], 							]; 		</script> 	</head> 	<body onload='sP3f3();' oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>공찾기-폭탄피하기</a></li><li><a href='../Jg2i/Jg2i2.html'>캐릭터 이동(Zoom)</a></li><li><a href='../Jg2i/Jg2i3.html'>지는 가위바위보</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-TV</a></li><ul><li><a href='Jg2i4.html'>코드읽기</a></li><li><a href='Jg2i4a.html'>알고리즘</a></li><li><a href='Jg2i4k.html'>키워드</a></li><li><a href='Jg2i4b.html'>빈칸채우기</a></li><li><a href='Jg2i4s.html'>실행순서</a></li><li><a href='Jg2i4m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/Chapter12/TVControl.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/스레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀호출</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>TV 리모컨의 입력(전원, 상, 하, 좌, 우)에 따라 TV를 제어하는 문제입니다 이를 해결하는 방법을 아래 참고자료에서 한줄씩 복붙해서 설명하세요 </pre> 				<pre class='selectable'>TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
+TV 전원을 켭니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
+현재 채널은 91번입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>하</span></b>
+현재 채널은 90번입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>좌</span></b>
+현재 음량은 9입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>우</span></b>
+현재 음량은 10입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
+</pre><br><pre class='selectable'>TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
+TV 전원을 켭니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
+TV 전원을 끕니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
+</pre><br><pre class='selectable'>TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>전원</span></b>
+TV 전원을 켭니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
+현재 채널은 91번입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
+현재 채널은 92번입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>상</span></b>
+현재 채널은 93번입니다
+TV 리모컨의 상, 하, 좌, 우, 전원, 종료 중 하나를 입력하세요 : <b><span style='color:rgb(255,0,0);'>종료</span></b>
 </pre><br>  	 				<h4>알고리즘</h4> 				<div id="card" style='width:1200px;'> 	  				<div id="cardSlots"></div> 	  				<div id="cardPile"></div> 				</div> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body>  </html>  
