--- a/Jg2i1b.html
+++ b/Jg2i1b.html
@@ -1,39 +1,63 @@
-<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "import","imports" ], [ "import","imports" ], [ "import","imports" ], [ "public" ], [ "class" ], [ "new" ], [ "new" ], [ "new" ], [ "package" ], [ "import","imports" ], [ "public" ], [ "class" ], [ "protected","protect" ], [ "protected","protect" ], [ "protected","protect" ], [ "private" ], [ "private" ], [ "public" ], [ "this" ], [ "this" ], [ "this" ], [ "this" ], [ "this" ], [ "public" ], [ "this" ], [ "Math.random","random" ], [ "public" ], [ "this" ], [ "public" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "this" ], [ "this" ], [ "?" ], [ ":" ], [ "return" ], [ "private" ], [ "for" ], [ "+=" ], [ "return" ], [ "package" ], [ "public" ], [ "class" ], [ "extends","extend" ], [ "public" ], [ "super" ], [ "super" ], [ "super" ], [ "super" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>공찾기-폭탄피하기</a></li><ul><li><a href='Jg2i1.html'>코드읽기</a></li><li><a href='Jg2i1a.html'>알고리즘</a></li><li><a href='Jg2i1k.html'>키워드</a></li><li><a href='Jg2i1b.html'>빈칸채우기</a></li><li><a href='Jg2i1s.html'>실행순서</a></li><li><a href='Jg2i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/Chapter12/FindGame.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i2.html'>캐릭터 이동(Zoom)</a></li><li><a href='../Jg2i/Jg2i3.html'>지는 가위바위보</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-TV</a></li><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/스레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀호출</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>상자 3개 중 하나에 임의로 공이나 폭탄을 숨기고 그 위치를 맞추는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>3</span></b>
+<!DOCTYPE html> <html> 	<head> 		<meta http-equiv="Content-Type" content="text/html; charset=UTF-8"> 		<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7250753558435816" crossorigin="anonymous"></script> 		<link rel="stylesheet" href="../layout.css"> 		<script type="text/javascript" src="../functions.js"></script> 		<script> 			const sP3d10 = [ [ "import","imports" ], [ "import","imports" ], [ "import","imports" ], [ "public" ], [ "class" ], [ "new" ], [ "new" ], [ "new" ], [ "package" ], [ "import","imports" ], [ "public" ], [ "class" ], [ "protected","protect" ], [ "protected","protect" ], [ "protected","protect" ], [ "private" ], [ "private" ], [ "public" ], [ "this" ], [ "this" ], [ "this" ], [ "this" ], [ "this" ], [ "public" ], [ "this" ], [ "Math.random","random" ], [ "public" ], [ "this" ], [ "public" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "+=" ], [ "this" ], [ "this" ], [ "?" ], [ ":" ], [ "return" ], [ "private" ], [ "for" ], [ "+=" ], [ "return" ], [ "package" ], [ "public" ], [ "class" ], [ "extends","extend" ], [ "public" ], [ "super" ], [ "super" ], [ "super" ], [ "super" ], 							]; 		</script> 	</head> 	<body oncontextmenu="return false" onselectstart="return false" oncopy="return false" oncut="return false" onpaste="return false" draggable="false" ondragstart="return false" ondrop="return false"> 		<div id = "container"> 			<div id = "titleBox"> JAVA 프로그래밍 </div> 			<div id = "navigationBox"><ol start=0><li><a href='../Jf0i/Jf0i0.html'>JAVA 프로그래밍 시작</a></li><li><a href='../Jf1i/Jf1i0.html'>출력</a></li><li><a href='../Jf2i/Jf2i0.html'>입력</a></li><li><a href='../Jf3i/Jf3i0.html'>변수</a></li><li><a href='../Jf4i/Jf4i0.html'>연산자</a></li><li><a href='../Jf5i/Jf5i0.html'>선택문(삼항연산자/switch)</a></li><li><a href='../Jf6i/Jf6i0.html'>선택문(if)</a></li><li><a href='../Jf7i/Jf7i0.html'>반복문(while)</a></li><li><a href='../Jf8i/Jf8i0.html'>반복문(for)</a></li><li><a href='../Jf9i/Jf9i0.html'>배열</a></li><li><a href='../Jg0i/Jg0i0.html'>문자열/컬렉션</a></li><li><a href='../Jg1i/Jg1i0.html'>클래스/패키지</a></li><li><a href='../Jg2i/Jg2i0.html'>상속/다형성</a></li><ul><li><a href='../Jg2i/Jg2i1.html'>공찾기-폭탄피하기</a></li><ul><li><a href='Jg2i1.html'>코드읽기</a></li><li><a href='Jg2i1a.html'>알고리즘</a></li><li><a href='Jg2i1k.html'>키워드</a></li><li><a href='Jg2i1b.html'>빈칸채우기</a></li><li><a href='Jg2i1s.html'>실행순서</a></li><li><a href='Jg2i1m.html'>실행상태</a></li><li><a href='https://github.com/CodeReading101/JAVA/blob/main/Chapter12/FindGame.java' target='code'>소스코드</a></li></ul><li><a href='../Jg2i/Jg2i2.html'>캐릭터 이동(Zoom)</a></li><li><a href='../Jg2i/Jg2i3.html'>지는 가위바위보</a></li><li><a href='../Jg2i/Jg2i4.html'>리모컨-TV</a></li><li><a href='../Jg2i/Jg2i5.html'>리모컨-TV,에어컨,청소기</a></li></ul><li><a href='../Jg3i/Jg3i0.html'>GUI기초</a></li><li><a href='../Jg4i/Jg4i0.html'>GUI응용</a></li><li><a href='../Jg5i/Jg5i0.html'>예외/스레드</a></li><li><a href='../Jg6i/Jg6i0.html'>파일입출력</a></li><li><a href='../Jg7i/Jg7i0.html'>네트워크(1:1)</a></li><li><a href='../Jg8i/Jg8i0.html'>네트워크(1:n)</a></li><li><a href='../Jg9i/Jg9i0.html'>열거형/제네릭</a></li><li><a href='../Jh0i/Jh0i0.html'>재귀호출</a></li></ol></div>  			<div id = "contentBox"> 				<h4>문제</h4> 				<pre style='white-space:normal;'>상자 3개 중 하나에 임의로 공이나 폭탄을 숨기고 그 위치를 맞추는 문제입니다 이를 해결하는 다음 프로그램에 대해 빈칸을 채우세요 </pre> 				<pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>3</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
                놓쳤다!
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>1</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
    O   
-  펑!! 
-</pre><br><pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>1</span></b>
+  펑!! </div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>1</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
  놓쳤다!
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>3</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
-               휴우! 
-</pre><br><pre class='selectable'> 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>2</span></b>
+               휴우!</div> 
+</pre><br><pre class='selectable'><div style='font-family:monospace;line-height:1.2;'>  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
+ 1, 2, 3 중에서 공을 숨긴 컵을 찾으세요:  <b><span style='color:rgb(255,0,0);'>2</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
           O   
         찾았다! 
+  ___    ___    ___  
+ |   |  |   |  |   | 
+ | 1 |  | 2 |  | 3 | 
+  
  1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: <b><span style='color:rgb(255,0,0);'>2</span></b>
   ___    ___    ___  
  |   |  |   |  |   | 
  | 1 |  | 2 |  | 3 | 
    O   
-         휴우! 
+         휴우!</div> 
 </pre><br>  	  				<h4>코드 빈칸 채우기</h4> 				<pre style='white-space:pre;border:1px'><input id='blank0' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(0)'> java.util.Scanner; 
 <input id='blank1' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(1)'> find.FindBall; 
 <input id='blank2' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(2)'> find.FindBomb; 
@@ -106,7 +130,10 @@
  
 <input id='blank44' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(44)'> <input id='blank45' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(45)'> FindBomb <input id='blank46' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='7' onchange='sP3f6(46)'> FindBall  
 { 
-		<input id='blank47' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(47)'>.message = "1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: "; 
-		<input id='blank48' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(48)'>.meet   = " 펑!! \n";		 
-		<input id='blank49' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(49)'>.dodge  = " 휴우!\n";		 
+	<input id='blank47' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='6' onchange='sP3f6(47)'> FindBomb() { 
+		<input id='blank48' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(48)'>();  
+		<input id='blank49' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(49)'>.message = "1, 2, 3 중에서 폭탄을 숨긴 상자를 찾으세요: "; 
+		<input id='blank50' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(50)'>.meet   = " 펑!! \n";		 
+		<input id='blank51' type='text' style='background-color:Silver; border:0px;' required minlength='1' maxlength='30' size='5' onchange='sP3f6(51)'>.dodge  = " 휴우!\n";		 
+	} 
 } 	 			</pre> 				<br><br><br><br><br><br><br><br> &nbsp;  			</div> 		</div> 	</body> </html> 
